--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,6 @@
 @import 'animation.scss';
 @import 'variables.scss';
 
-
 * {
   font-family: $fonts;
 }
@@ -22,19 +21,18 @@ header {
   z-index: 1;
   color: var(--heading-color);
   position: absolute;
-  top:0;
+  top: 0;
   height: 7%;
-  width:100%;
+  width: 100%;
   background: var(--footer-header-bg);
   display: flex;
   justify-content: space-between;
   align-items: center;
   nav {
-  
-  padding:0;
+    padding: 0;
     margin: 0;
     .nav__links {
-       transition: all 0.5s ease 0s;
+      transition: all 0.5s ease 0s;
       list-style: none;
       li {
         display: inline-block;
@@ -57,68 +55,71 @@ header {
     right: 2%;
     margin: 0 auto;
     display: none;
-    cursor:pointer;
-    .bar1, .bar2, .bar3 {
-  width: 20px;
-  height: 3px;
-  background-color:var(--heading-color);
-  margin: 3px 0;
-  transition: 0.4s;
-}
-}
-.change .bar1 {
-  transform: rotate(-45deg) translate(-4px, 5px);
-}
-.change .bar2 {opacity: 0;}
-.change .bar3 {
-  transform: rotate(45deg) translate(-3px, -5px);
-}
-.theme-switch-wrapper {
-  position: absolute;
-  top: 25%;
-  left: 35vh;
-  input[type="checkbox"] {
-    width: 40px;
-    height: 20px;
-    background:var(--get-started-hover-bg);
-    border-radius: 20px;
-    appearance: none;
-    transition: all 0.5s ease 0s;
+    cursor: pointer;
+    .bar1,
+    .bar2,
+    .bar3 {
+      width: 20px;
+      height: 3px;
+      background-color: var(--heading-color);
+      margin: 3px 0;
+      transition: 0.4s;
+    }
   }
-  input[type="checkbox"]:before {
-    content:'';
+  .change .bar1 {
+    transform: rotate(-45deg) translate(-4px, 5px);
+  }
+  .change .bar2 {
+    opacity: 0;
+  }
+  .change .bar3 {
+    transform: rotate(45deg) translate(-3px, -5px);
+  }
+  .theme-switch-wrapper {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    left:9%;
-    top:10%;
-    background-color: white;
-    transform: scale(1.1);
-    box-shadow: 0 2px 2px rgba(0,0,0,0.2);
-    transition: all 0.5s ease 0s;
+    top: 25%;
+    left: 35vh;
+    input[type='checkbox'] {
+      width: 40px;
+      height: 20px;
+      background: var(--get-started-hover-bg);
+      border-radius: 20px;
+      appearance: none;
+      transition: all 0.5s ease 0s;
+    }
+    input[type='checkbox']:before {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      left: 9%;
+      top: 10%;
+      background-color: white;
+      transform: scale(1.1);
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+      transition: all 0.5s ease 0s;
+    }
+    input:checked[type='checkbox']:before {
+      left: 50%;
+    }
   }
-  input:checked[type="checkbox"]:before{
-    left: 50%;
-  }
-}
 }
 
 section {
   z-index: -1;
   background-color: var(--section-bg);
-  top:7%;
+  top: 7%;
   position: absolute;
   height: 85vh;
-  width:100%;
+  width: 100%;
   #coins {
     position: absolute;
-    top:0;
-    width:100%;
-    height:100%;
-    z-index: -1;  
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
-
 }
 //Start Page container
 .start-container {
@@ -137,8 +138,8 @@ section {
       box-shadow: 0px 4px 56px var(--shadow-color);
       border-radius: 39px;
       h1 {
-       font-family: $fonts;
-       font-weight: 400;
+        font-family: $fonts;
+        font-weight: 400;
         font-style: normal;
         font-weight: bold;
         font-size: 2em;
@@ -153,7 +154,7 @@ section {
         color: var(--color);
       }
     }
-   
+
     p {
       text-align: center;
       align-self: center;
@@ -164,95 +165,93 @@ section {
     display: block;
     margin: auto;
     width: 30vw;
-    filter: var(--hue)
+    filter: var(--hue);
   }
 }
 //actions page
- .universal-container {
- @include universal-container;
+.universal-container {
+  @include universal-container;
   transition: all 0.5s ease 0s;
-  }
-  .income, .outcome, .finance {
-   
-    text-align: center;
-    h1 {
-      font-size: 4vh;
-    }
-    h2 {
-      font-size: 3vh;
-    }
-  }
-  .income {
-grid-area: income;
-  }
-  .outcome {
-    grid-area: outcome;
-  }
-  .finance {
-grid-area: finance;
-width: 100%;
-table {
-  padding: 1em;
 }
-
+.income,
+.outcome,
+.finance {
+  text-align: center;
+  h1 {
+    font-size: 4vh;
   }
-.submission-form{
+  h2 {
+    font-size: 3vh;
+  }
+}
+.income {
+  grid-area: income;
+}
+.outcome {
+  grid-area: outcome;
+}
+.finance {
+  grid-area: finance;
+  width: 100%;
+  table {
+    padding: 1em;
+  }
+}
+.submission-form {
   text-align: center;
   padding: 1vw;
-  margin:0 auto;
+  margin: 0 auto;
   max-width: 30vw;
-  
-  select, option {
+
+  select,
+  option {
     background: var(--input-bg);
-    display:block;
-    border:2px solid var(--get-started-bg);
-    font-size:0.8em;
-    width:103%;
+    display: block;
+    border: 2px solid var(--get-started-bg);
+    font-size: 0.8em;
+    width: 103%;
     color: var(--main-color);
   }
-  label{
-    display:block;
-    padding:1vw;
-    font-size:2vh;
+  label {
+    display: block;
+    padding: 1vw;
+    font-size: 2vh;
   }
-  input{
-   @include input;
-   
+  input {
+    @include input;
   }
   .button {
     padding: 1vw;
     margin: 0 auto;
-     margin-top: 2em;
-     display: block;
-     max-width: 20vw;
-     border-radius: 30px;
-     border: 0px;
-     font-size: 1em;
-     text-transform: uppercase;
-     font-weight: 700;
-     color: var(--main-color);
-     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-     transition: all 0.5s ease 0s;
-     &-income{
-      background: #7E9C3D;
-     }
-     &-outcome {
-       background: #D97F7F;
-     }
-     &:hover {
-       transform: scale(1.2);
-     }
+    margin-top: 2em;
+    display: block;
+    max-width: 20vw;
+    border-radius: 30px;
+    border: 0px;
+    font-size: 1em;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: var(--main-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: all 0.5s ease 0s;
+    &-income {
+      background: #7e9c3d;
+    }
+    &-outcome {
+      background: #d97f7f;
+    }
+    &:hover {
+      transform: scale(1.2);
+    }
   }
-  
 }
 table {
   color: var(--main-color);
   width: 100%;
   & tr {
-width: 100%;
+    width: 100%;
   }
 }
-
 
 .get-started {
   z-index: 2;
@@ -278,18 +277,18 @@ width: 100%;
 }
 //wallet page
 .wallet-container {
-   height: 100vh; /* or position:absolute; height:100%; */
+  height: 100vh; /* or position:absolute; height:100%; */
   @include wallet-container;
   transition: all 0.5s ease 0s;
 
-  h1{
+  h1 {
     margin: 0 auto;
     padding: 1em;
     text-align: center;
   }
   form {
-    padding:  0 0.5em;
-    display:flex;
+    padding: 0 0.5em;
+    display: flex;
     justify-content: space-around;
     align-items: center;
     input {
@@ -298,8 +297,8 @@ width: 100%;
       width: 70%;
     }
     label {
-      font-weight:900;
-      font-size:3vh;
+      font-weight: 900;
+      font-size: 3vh;
       margin: 2vw;
       text-align: center;
     }
@@ -312,33 +311,43 @@ width: 100%;
     width: 90%;
     color: var(--main-color);
   }
-  
 }
 .history {
-height: 60%;
-overflow: auto;
+  height: 60%;
+  overflow: auto;
 }
-  
+
 footer {
-  color:var(--heading-color);
+  color: var(--heading-color);
   z-index: 1;
   position: absolute;
   height: 8%;
   bottom: 0;
-  width:100%;
-  background: var(--footer-header-bg); 
+  width: 100%;
+  background: var(--footer-header-bg);
   display: flex;
   justify-content: space-around;
 }
-
-
+.chart-container {
+  text-align: center;
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  max-height: 70%;
+}
+.barChart {
+  padding: 1em;
+}
+.pieChart {
+  padding: 1em;
+}
 @media (max-width: 750px) {
   .universal-container {
     grid-template-columns: 1fr 1fr;
-    grid-template-areas: "income outcome" !important;
+    grid-template-areas: 'income outcome' !important;
   }
   .finance {
-    display:none !important;
+    display: none !important;
   }
   .welcome {
     padding: 1em !important;
@@ -347,29 +356,24 @@ footer {
     width: 100px !important;
   }
   nav {
-
-.responsive{
- transition: all 0.5s ease 0s;
-  background-color:var(--footer-header-bg);
-  position: absolute;
-  top:15%;
-  right: 0%;
-       display:inline-block !important;
-       li{
-         display: block !important;
-       }
-      }    
-     ul {
-      
-       li {
-         display: none !important;
-       }
-     }
-     
-     
+    .responsive {
+      transition: all 0.5s ease 0s;
+      background-color: var(--footer-header-bg);
+      position: absolute;
+      top: 15%;
+      right: 0%;
+      display: inline-block !important;
+      li {
+        display: block !important;
+      }
+    }
+    ul {
+      li {
+        display: none !important;
+      }
+    }
   }
   .bars {
-           display: inline-block !important;
-         }
+    display: inline-block !important;
+  }
 }
-
