--- a/style/style.css
+++ b/style/style.css
@@ -169,7 +169,9 @@ header .bars {
   cursor: pointer;
 }
 
-header .bars .bar1, header .bars .bar2, header .bars .bar3 {
+header .bars .bar1,
+header .bars .bar2,
+header .bars .bar3 {
   width: 20px;
   height: 3px;
   background-color: var(--heading-color);
@@ -198,7 +200,7 @@ header .theme-switch-wrapper {
   left: 35vh;
 }
 
-header .theme-switch-wrapper input[type="checkbox"] {
+header .theme-switch-wrapper input[type='checkbox'] {
   width: 40px;
   height: 20px;
   background: var(--get-started-hover-bg);
@@ -210,7 +212,7 @@ header .theme-switch-wrapper input[type="checkbox"] {
   transition: all 0.5s ease 0s;
 }
 
-header .theme-switch-wrapper input[type="checkbox"]:before {
+header .theme-switch-wrapper input[type='checkbox']:before {
   content: '';
   position: absolute;
   width: 20px;
@@ -227,7 +229,7 @@ header .theme-switch-wrapper input[type="checkbox"]:before {
   transition: all 0.5s ease 0s;
 }
 
-header .theme-switch-wrapper input:checked[type="checkbox"]:before {
+header .theme-switch-wrapper input:checked[type='checkbox']:before {
   left: 50%;
 }
 
@@ -343,15 +345,21 @@ section #coins {
   transition: all 0.5s ease 0s;
 }
 
-.income, .outcome, .finance {
+.income,
+.outcome,
+.finance {
   text-align: center;
 }
 
-.income h1, .outcome h1, .finance h1 {
+.income h1,
+.outcome h1,
+.finance h1 {
   font-size: 4vh;
 }
 
-.income h2, .outcome h2, .finance h2 {
+.income h2,
+.outcome h2,
+.finance h2 {
   font-size: 3vh;
 }
 
@@ -386,7 +394,8 @@ section #coins {
   max-width: 30vw;
 }
 
-.submission-form select, .submission-form option {
+.submission-form select,
+.submission-form option {
   background: var(--input-bg);
   display: block;
   border: 2px solid var(--get-started-bg);
@@ -429,11 +438,11 @@ section #coins {
 }
 
 .submission-form .button-income {
-  background: #7E9C3D;
+  background: #7e9c3d;
 }
 
 .submission-form .button-outcome {
-  background: #D97F7F;
+  background: #d97f7f;
 }
 
 .submission-form .button:hover {
@@ -557,11 +566,31 @@ footer {
       justify-content: space-around;
 }
 
+.chart-container {
+  text-align: center;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  max-height: 70%;
+}
+
+.barChart {
+  padding: 1em;
+}
+
+.pieChart {
+  padding: 1em;
+}
+
 @media (max-width: 750px) {
   .universal-container {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-        grid-template-areas: "income outcome" !important;
+        grid-template-areas: 'income outcome' !important;
   }
   .finance {
     display: none !important;
